--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=Employee Payroll App
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll_db
+spring.datasource.username=Divit
+spring.datasource.password=Divit
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
