--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=Divit
 spring.datasource.password=Divit
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
