--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=Divit
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
