--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.root=INFO
+logging.level.com.bridgelabz.employee_payroll_app=DEBUG
+logging.file.name=logs/employee_payroll_app.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
