[Harshit] feat: Implement UC8 - Environment-Specific Logging Configuration

--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.level.com.bridgelabz.employee_payroll_app=DEBUG
 logging.file.name=logs/employee_payroll_app.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+spring.profiles.active=dev
