--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Employee Payroll App
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll_db
-spring.datasource.username=Divit
-spring.datasource.password=Divit
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:employee_payroll_db}
+spring.datasource.username=${MYSQL_USER:Divit}
+spring.datasource.password=${MYSQL_PASSWORD:Divit}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
