--- a/employee-payroll-app/pom.xml
+++ b/employee-payroll-app/pom.xml
@@ -42,10 +42,11 @@
 			<version>1.18.20</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- Validation Dependency -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.4.3</version>
 		</dependency>
 		<!-- Spring Boot DevTools Dependency -->
 		<dependency>
