[Harshit] Added feat: Implement UC13 - Add remaining properties to EmployeeDTO and Employee model

--- a/employee-payroll-app/src/main/resources/application-dev.properties
+++ b/employee-payroll-app/src/main/resources/application-dev.properties
@@ -10,13 +10,13 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Logging configuration
-logging.level.root=WARN
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.level.com.bridgelabz.employee_payroll_app=WARN
-logging.file.name=logs/prod-employee_payroll_app.log
+logging.level.root=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.bridgelabz.employee_payroll_app=DEBUG
+logging.file.name=logs/employee_payroll_app.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # Active profile
-spring.profiles.active=prod
+spring.profiles.active=dev
