--- a/employee-payroll-app/src/main/resources/application-staging.properties
+++ b/employee-payroll-app/src/main/resources/application-staging.properties
@@ -1,6 +1,22 @@
-spring.profiles.active=staging
+# Application name
+spring.application.name=Employee Payroll App
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:employee_payroll_db}
+spring.datasource.username=${MYSQL_USER:Divit}
+spring.datasource.password=${MYSQL_PASSWORD:Divit}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging configuration
 logging.level.root=INFO
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 logging.level.com.bridgelabz.employee_payroll_app=INFO
 logging.file.name=logs/staging-employee_payroll_app.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Active profile
+spring.profiles.active=staging
