--- a/employee-payroll-app/src/main/resources/application.properties
+++ b/employee-payroll-app/src/main/resources/application.properties
@@ -1,15 +1,23 @@
+# Application name
 spring.application.name=Employee Payroll App
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:employee_payroll_db}
-spring.datasource.username=${MYSQL_USER:Divit}
-spring.datasource.password=${MYSQL_PASSWORD:Divit}
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll_db
+spring.datasource.username=Divit
+spring.datasource.password=Divit
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Logging configuration
 logging.level.root=INFO
-logging.level.com.bridgelabz.employee_payroll_app=DEBUG
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+logging.level.com.bridgelabz.employee_payroll_app=INFO
 logging.file.name=logs/employee_payroll_app.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-spring.profiles.active=dev
+
+# Active profile
+spring.profiles.active=default
